# LLMGT

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
CONFIG/experimental_config/: experiment_t2.json  experiments_t1.json
CONFIG/prompts_config/: prompts_config.json  prompts_one_shot.json
OUTPUT/CACHE/: T1_ndet_t07_tok512_s42_output_b_v1_0_shot.arrow
OUTPUT/SAMPLED_GAMES/: sampled_games_10_batches_full.json  sampled_games_10_batches_variant.json  sampled_games_20_batches_full.json  sampled_games_20_batches_variant.json  sampled_games_25_batches_full.json  sampled_games_25_batches_variant.json
OUTPUT/SAMPLED_PROMPTS/: prompts_from_sampled_games_25_batches_variant.json
docs/: build_prompts.html  evaluation.html  game_build.md  game_sample.md  games.html  genindex.html  index.html  index.md  inference.html  inference_main.html  objects.inv  paths.md  prompts.html  prompts.md  prompts_index.html  py-modindex.html  search.html  searchindex.js
docs/_autosummary/: llmgt.inference.inference.build_config.html  llmgt.inference.inference.build_experiment.html  llmgt.inference.inference.main.html  llmgt.inference.inference.preview.html  llmgt.inference.inference.run_experiment.html
docs/_modules/: index.html
docs/_sources/: games.rst.txt  index.rst.txt  inference.rst.txt  prompts.rst.txt
docs/source/: build_games.rst  conf.py  evaluation.rst  inference.rst  (+1 more)
game_sample/: index.html
notebooks/: evaluation.ipynb
search/: search_index.json
site/: genindex.html  index.html  inference.html
tests/: test_build_prompts.py
(+79 files in other folders)
